# api/API_Usuario/swagger_server/controllers/usuarios_controller.py
@@ -100,15 +100,7 @@ def usuarios_id_put(body, id):  # noqa: E501
 
 
 def usuarios_post(body):  # noqa: E501
-    """Crear un nuevo usuario
-
-     # noqa: E501
-
-    :param body: Datos necesarios para crear un nuevo usuario
-    :type body: dict | bytes
-
-    :rtype: Usuario
-    """
+   
     data = request.get_json()
     firstname = data.get("firstname")
     secondname = data.get("secondname")
@@ -123,6 +115,15 @@ def usuarios_post(body):  # noqa: E501
     # Crear el nuevo usuario
     nuevo_usuario = dbconnection.dbSignUp( correo=correo,firstname=firstname,secondname=secondname, password=password1,password=password2)
     
-
+def usuarios_id_delete(id,password):  # noqa: E501
+    
+    usuario = dbconnection.usuarios_id_get(id)  # Llama a la función para obtener el usuario por ID
+    if usuario and (usuario.password==password):  # Verifica la contraseña
+        result = dbconnection.dbDeleteUserById(id)  # Llama a la función de eliminación en la base de datos
+        if result:
+            return jsonify({"message": "Usuario eliminado exitosamente"}), 200
+    return jsonify({"error": "ID o contraseña incorrectos"}), 404
+    
+    
 
 
